Update main page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Alstar - Bootstrap one page parallax template</title>
+  <title>Web studio</title>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- css -->
@@ -28,7 +28,7 @@
         </button>
 
         <!-- Logo text or image -->
-        <a class="navbar-brand" href="index.html">Alstar</a>
+        <a class="navbar-brand" href="index.html">Web studio</a>
 
       </div>
       <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
@@ -56,7 +56,7 @@
             <div class="carousel-background"><img src="img/intro/1.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Alstar web studio</h2>
+                <h2 class="animated fadeInDown">Web studio</h2>
                 <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
@@ -384,7 +384,7 @@
           <div class="section-heading">
             <h2>Contact us</h2>
             <div class="heading-line"></div>
-            <p>If you have any question or just want to say 'hello' to Alstar web studio please fill out form below and
+            <p>If you have any question or just want to say 'hello' to Web studio please fill out form below and
               we will be get in touch with you within 24 hours. </p>
           </div>
         </div>
@@ -468,7 +468,7 @@
             <i class="fa fa-envelope fa-4x"></i>
             <h5>Email us</h5>
             <p>
-              hello@alstarstudio.com<br />sales@alstarstudio.com
+              hello@webstudio.com<br />sales@webstudio.com
             </p>
           </div>
         </div>
@@ -512,9 +512,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>Copyright &copy; Alstar. All rights reserved.</p>
+          <p>Copyright &copy; Web Studio. All rights reserved.</p>
           <div class="credits">
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed by <a href="#">Oleh Petraniuk</a>
           </div>
         </div>
       </div>
